--- a/frontend/LearningPlatform/Learning/package.json
+++ b/frontend/LearningPlatform/Learning/package.json
@@ -15,11 +15,18 @@
     "@mui/icons-material": "^6.4.5",
     "@mui/material": "^6.4.5",
     "@mui/styled-engine-sc": "^6.4.3",
-    "axios": "^1.7.9",
+    "@reduxjs/toolkit": "^2.6.0",
+    "axios": "^1.8.2",
+    "cookies-ts": "^1.0.5",
+    "guid-typescript": "^1.0.9",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
-    "styled-components": "^6.1.15"
+    "react-toastify": "^11.0.5",
+    "styled-components": "^6.1.15",
+    "typescript-cookie": "^1.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
